[workspace]
resolver = "2"
members = [
    "protoc-gen-prost",
    "protoc-gen-prost-crate",
    "protoc-gen-prost-serde",
    "protoc-gen-prost-validate",
    "protoc-gen-tonic",
    "protoc-wkt",
]

[workspace.dependencies]
once_cell = "1.10.0"
pbjson-build = "0.8.0"
prost = { version = "0.14.1", default-features = false, features = ["std"] }
prost-build = { version = "0.14.1", default-features = false }
prost-types = { version = "0.14.1", default-features = false }
regex = { version = "1.5.5", default-features = false }
tonic-build = "0.14.2"

[profile.release]
codegen-units = 1
lto = "fat"
debug = true
